# iso15118-binding-rs

./: Cargo.toml  README.md
afb-binding/: Cargo.toml
afb-binding/etc/: binder-iso15118.json  binding-iso15118.json  binding-iso15118.yaml  binding-isoslac.json  binding-test.sh  build.rs
afb-binding/src/: binding.rs  controller.rs  libso.rs  verbs.rs
afb-test/: Cargo.toml
afb-test/certs/: mkcerts.sh
afb-test/etc/: README.md  afe { cglue::gnutls_x509_crt_deinit(cert) };  binding-iso15118-test.json  binding-isoslac-test.json  binding-isotap-test.json  build.rs  client-tls-probe.sh  start-iso-test.sh  start-iso15118-server.sh  start-tlsonly-server.sh
afb-test/src/: iso15118-test.rs  libso.rs
afb-test/trace-logs/: hello-tls-1.3.keylog  hello-tls-1.3.pcapng  hello-tls-with-secrets.pcapng  iso15118-slac+sdp+tls.pcapng  iso15118-slac+sdp.pcapng  iso15118-slac+sdp2.pcapng  iso15118-v2g-protocol-handshake.pcapng  iso15118-v2g-session-set.pcapng
afb-types/src/: iso15118-types.rs  libso.rs
iso-15118/: Cargo.toml
iso-15118/capi/: build.rs  capi-encoders.h  capi-encoders.rs  capi-map.h  capi-mod.rs  capi-network.h  capi-network.rs  tls.c
iso-15118/src/: exi-transport.rs  ipv6-sdp.rs  ipv6-tcp.rs  ipv6-tls.rs  lib.rs  manager.rs
iso-15118/test/: encoder-test.rs
