[package]
name = "iso15118-binding"
version = "0.0.1"
edition = "2021"
authors = ["Fulup Le Foll <fulup@iot.bzh>"]
publish = false
build = "etc/build.rs"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
iso15118= {path ="../iso-15118"}
typesv4= {path ="../afb-types"}

[lib]
name = "afb_iso15118"
crate-type = ["cdylib"]
path = "src/libso.rs"