[package]
name = "iso15118-test"
version = "0.1.0"
authors = ["fulup@iot.bzh"]
build = "etc/build.rs"
edition = "2021"

[dependencies]
afbv4 = {git= "https://github.com/redpesk-common/afb-librust", branch="master", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json={ version= "1.0"}
iso15118= {git= "https://github.com/tux-evse/iso15118-encoders-rs.git", branch="main"}

[[example]]
# optional test use:  clear && cargo build --example iso15118_test
name = "iso15118_test"
crate-type = ["cdylib"]
path = "src/libso.rs"

